# smcp-plugin-github

./: .gitignore  LICENSE  README.md  coverage.json  coverage.xml  pyproject.toml
plugins/: __init__.py
plugins/gh/: __init__.py  cli.py
plugins/git/: __init__.py  cli.py
tests/: README.md  __init__.py  conftest.py  run_tests.py
tests/e2e/: __init__.py  test_gh_e2e.py  test_git_e2e.py
tests/integration/: __init__.py  test_gh_integration.py  test_git_integration.py
tests/unit/: test_gh_plugin.py  test_git_plugin.py
