[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smcp-plugin-github"
version = "1.0.0"
description = "SMCP plugins for GitHub CLI (gh) and Git command-line tools"
readme = "README.md"
license = {text = "AGPLv3"}
authors = [
    {name = "Mark Rizzn Hopkins", email = "mark@sanctumos.org"}
]
maintainers = [
    {name = "Mark Rizzn Hopkins", email = "mark@sanctumos.org"}
]
keywords = ["mcp", "smcp", "github", "git", "plugin", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=plugins",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=100",
    "-v",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "requires_gh: Tests that require gh CLI",
    "requires_git: Tests that require git CLI",
]

[tool.coverage.run]
source = ["plugins"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[project.urls]
Homepage = "https://sanctumos.org"
Documentation = "https://github.com/sanctumos/smcp-plugin-github"
Repository = "https://github.com/sanctumos/smcp-plugin-github"
Issues = "https://github.com/sanctumos/smcp-plugin-github/issues"
